tests/parse_print/random_perturb/set01/delete-10/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-10/delete-10.essence "tests/parse_print/random_perturb/set01/delete-10/delete-10.essence" line 1, column 1:
unexpected lnguage
expecting branching on, end of input, find statement, given statement, language, letting statement, objective, such that statement, or where statement
    "tests/parse_print/random_perturb/set01/delete-10/delete-10.essence" line 1, column 1
    lnguage Essence 1.3
    ^^^^^^^